--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,8 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@theme {
+  --color-primary: oklch(70.7% 0.165 254.624);
+  --color-primary-200: oklch(48.8% 0.243 264.376);
+  --color-secondary: oklch(70.2% 0.183 293.541);
+  --color-secondary-200: oklch(49.1% 0.27 292.581);
 }
